welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: type mismatch;
 found   : Unit
 required: Int
	} else if ((10-a)>(10-b)) {
               ^